# cross-section

./: .gitignore  MANIFEST.in  README.md  automated_test.py  automated_tests.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheel.yml  tests.yml
benchmarks/: perf.cpp  versions.sh
src/: area.hpp  aux.hpp  auxiliary.hpp  builtins.hpp  fastxs3d.cpp  vec.hpp  xs3d.hpp
xs3d/: __init__.py  threed.py  twod.py  typing.py
