[metadata]
name = xs3d
url = https://github.com/seung-lab/cross-section/
summary = Compute cross sectional area of 3d shapes.
description_file =
    README.md
long_description_content_type = text/markdown
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/cross-section/
license=License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Image Processing

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = 
    xs3d
    fastxs3d

[wheel]
universal = 0